--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.32999998">
+        app:layout_constraintVertical_bias="0.32999998"
+        app:hintTextColor="@color/white">
 
         <EditText
             android:id="@+id/username"
@@ -62,7 +63,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Username"
         app:layout_constraintVertical_bias="0.0"
-        app:passwordToggleEnabled="true">
+        app:passwordToggleEnabled="true"
+        app:hintTextColor="@color/white">
 
         <EditText
             android:id="@+id/password"
