--- a/app/src/main/res/layout/activity_fertilizer.xml
+++ b/app/src/main/res/layout/activity_fertilizer.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,9 +34,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintStart_toEndOf="@+id/imageView7"
         app:layout_constraintTop_toTopOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.465" />
+        app:layout_constraintVertical_bias="0.416" />
 
     <ImageView
         android:id="@+id/imageView7"
@@ -53,7 +55,7 @@
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#3171B9"
+        android:background="#D7E0EA"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="@+id/imageView7"
         app:layout_constraintStart_toStartOf="@+id/imageView7"
@@ -67,24 +69,24 @@
         android:layout_height="110dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="130dp"
         app:cardCornerRadius="20dp"
-        app:cardElevation="5dp"
+        app:cardElevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.13999999"
-        android:backgroundTint="@color/white">
+        android:backgroundTint="#247BDB">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:weightSum="10"
             android:orientation="horizontal"
-            android:background="@color/white"
-            android:layout_margin="5dp">
+            android:layout_margin="5dp"
+            android:background="#247BDB">
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -108,6 +110,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="About "
+                    android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="20sp" />
             </LinearLayout>
@@ -130,14 +133,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/about"
         app:layout_constraintVertical_bias="0.0"
-        android:backgroundTint="@color/white">
+        android:backgroundTint="#00A000">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:weightSum="10"
             android:orientation="horizontal"
-            android:background="@color/white"
             android:layout_margin="5dp">
 
             <LinearLayout
@@ -159,8 +161,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Available pesticides &amp; fertilizers "
+                    android:text="Available Fertilizers &amp; Price "
                     android:textAlignment="center"
+                    android:textStyle="bold"
                     android:textAllCaps="false"
                     android:textColor="@color/black"
                     android:textSize="20sp" />
@@ -183,13 +186,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkPesticides"
         app:layout_constraintVertical_bias="0.0"
-        android:backgroundTint="@color/white">
+        android:backgroundTint="#EEAF4B">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:weightSum="10"
             android:orientation="horizontal"
-            android:background="@color/white"
             android:layout_margin="5dp">
             <LinearLayout
                 android:layout_width="0dp"
@@ -210,6 +213,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Details according to the crop products "
+                    android:textStyle="bold"
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/black"
@@ -218,54 +222,13 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/qa"
-        android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="30dp"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailsPesticides"
-        app:layout_constraintVertical_bias="0.0"
-        android:backgroundTint="@color/white">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:weightSum="10"
-            android:orientation="horizontal"
-            android:background="@color/white"
-            android:layout_margin="5dp">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/qa" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="7"
-                android:gravity="center">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Q&amp;A "
-                    android:textAlignment="center"
-                    android:textAllCaps="false"
-                    android:textColor="@color/black"
-                    android:textSize="20sp" />
-            </LinearLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+
+
+
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
