--- a/app/src/main/res/layout/activity_pesticides.xml
+++ b/app/src/main/res/layout/activity_pesticides.xml
@@ -160,7 +160,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Available pesticides &amp; fertilizers "
+                    android:text="Available Pesticides &amp; Price"
                     android:textAlignment="center"
                     android:textStyle="bold"
                     android:textAllCaps="false"
