--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -54,6 +54,11 @@
 
                 <item
 
+                    android:id="@+id/nav_faq"
+                    android:title="FAQ" />
+
+                <item
+
                     android:id="@+id/nav_share"
                     android:title="Share" />
 
