--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="dark_green">#1B5B04</color>
     <color name="light_gray">#E2E2E2</color>
     <color name="light_blue">#0860A8</color>
+    <color name="transparent_white">#00FFFFFF</color>
+
 </resources>
