--- a/app/src/main/res/layout/activity_fertilizer.xml
+++ b/app/src/main/res/layout/activity_fertilizer.xml
@@ -172,7 +172,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/detailsPesticides"
+        android:id="@+id/detailsFertilizer"
         android:layout_width="match_parent"
         android:layout_height="110dp"
         android:layout_marginStart="30dp"
