--- a/app/src/main/res/layout/agriculture_service.xml
+++ b/app/src/main/res/layout/agriculture_service.xml
@@ -7,17 +7,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center_horizontal"
     android:layout_margin="20dp"
-    app:cardElevation="8dp"
+    app:cardElevation="10dp"
     app:cardCornerRadius="10dp"
     android:padding="10dp"
-    app:cardBackgroundColor="#FFFFFF"> <!-- Set the transparency of the CardView -->
+    app:cardBackgroundColor="#95FFFFFF"> <!-- Set the transparency of the CardView -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="11"
         android:orientation="vertical"
-        android:background="@color/white">
+        android:background="#95FFFFFF">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,10 +46,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center">
-         <ImageView
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:src="@drawable/line"/>
+
 
         </LinearLayout>
 
@@ -80,10 +77,6 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/line"/>
 
         </LinearLayout>
 
