--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,4 +21,11 @@
     <style name="Theme.LoginScreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/light_blue</item>
     </style>
+    <!-- Base application theme. -->
+    <style name="Base.Theme.Material3.Light" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
+
+    <style name="Theme.Material3.Light" parent="Base.Theme.Material3.Light" />
 </resources>
