--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <group android:checkableBehavior="single">
         <item
 
             android:id="@+id/nav_cycle"
-            android:title="Guidelines" />
+            android:title="@string/guidelines" />
+
+        <item
+
+            android:id="@+id/nav_lang"
+            android:title="@string/select_language"
+            android:actionLayout="@layout/spinner_layout"
+            app:showAsAction="always"/>
+
 
     </group>
 
     <group android:checkableBehavior="single">
-        <item android:title="Profile">
+        <item android:title="@string/profile">
 
             <menu>
 
@@ -18,12 +27,12 @@
 
                     <item
                         android:id="@+id/nav_profile"
-                        android:title="Profile" />
+                        android:title="@string/profile" />
 
                     <item
 
                         android:id="@+id/nav_logout"
-                        android:title="Logout" />
+                        android:title="@string/logout" />
 
                 </group>
 
@@ -33,19 +42,19 @@
 
     </group>
 
-        <item android:title="Communicate">
+        <item android:title="@string/communicate">
 
             <menu>
 
                 <item
 
                     android:id="@+id/nav_faq"
-                    android:title="FAQ" />
+                    android:title="@string/faq" />
 
                 <item
 
                     android:id="@+id/feedback"
-                    android:title="Feedback" />
+                    android:title="@string/feedback" />
 
             </menu>
 
