--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/transparent_white"
-            android:hint="Email"
+            android:hint="@string/email"
             android:textColor="@color/black"
             android:textSize="17sp" />
 
@@ -36,6 +36,6 @@
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reset Password"/>
+        android:text="@string/reset_password"/>
 
 </LinearLayout>
