--- a/app/src/main/res/layout/peseticdes_fertilizer.xml
+++ b/app/src/main/res/layout/peseticdes_fertilizer.xml
@@ -7,7 +7,6 @@
     android:layout_height="150dp"
     android:layout_gravity="center_horizontal"
     android:layout_margin="20dp"
-    android:padding="16dp"
     app:cardBackgroundColor="@color/transparent_white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,6 +32,8 @@
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.021"
             app:layout_constraintStart_toEndOf="@+id/image"
             app:layout_constraintTop_toTopOf="@+id/image" />
 
@@ -53,16 +54,18 @@
             android:id="@+id/isAvailableBack"
             android:layout_width="150dp"
             android:layout_height="50dp"
+            android:layout_marginStart="10dp"
             app:cardCornerRadius="30dp"
             app:cardElevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/image"
             app:layout_constraintTop_toBottomOf="@+id/price"
             app:layout_constraintVertical_bias="0.333">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="145dp"
                 android:layout_height="match_parent"
                 android:gravity="center">
 
@@ -71,18 +74,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
+                    android:textColor="@color/black"
                     android:textSize="17sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/isAvailableFertlizer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
+                    android:textColor="@color/black"
                     android:textSize="17sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
